# AIS_Oppgave

./: CMakeLists.txt  README.md  Untitled Diagram.drawio  main.cpp
.github/workflows/: cmake-multi-platform.yml  config.yml
data/: hello.txt
exportToHTML/: Logikk.cpp.html
include/: Controller.hpp  Handler.hpp  ImGui.hpp  Logic.hpp  Logikk.hpp  MyScene.hpp  Objects.hpp  Visual.hpp  controller.hpp  minScene.hpp  motionModel.hpp  objekt.hpp
libs/: CMakeLists.txt  eigen.hpp
src/: CMakeLists.txt  Controller.cpp  Handler.cpp  ImGui.cpp  Logic.cpp  Logikk.cpp  Objects.cpp  Visual.cpp  controller.cpp  main.cpp  objekt.cpp
tests/: CMakeLists.txt  testHandler.cpp  testLogic.cpp  testVisual.cpp  test_main.cpp  tests.cpp
